--- a/pages/welcome/welcome.wxss
+++ b/pages/welcome/welcome.wxss
@@ -1,7 +1,9 @@
 .container{
   display: flex;
   flex-direction: column;
-  align-items: center; 
+  align-items: center;
+  height: 100vh;
+  background-color: #b3d4db 
 }
 .user-avatar{
   width: 200rpx;
